gitops/clusters/homelab/apps/ollama/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    app: ollama-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434
